# mat

./: .gitattributes  .gitignore  Cargo.toml  Doxyfile  README.md  build.properties  build.xml
.github/: dependabot.yml
.github/disabled/: doxygen.yml
.github/workflows/: ant.yml  doxygen.yml  rust.yml
examples/: calc.mat  dupdef.mat  expr.mat  import.mat  not_callable.mat  not_constant.mat  rec_type.mat  redef_type.mat  unres_block.mat  unres_type.mat  unresolved_ref.mat
java/: build.properties  build.xml
java/examples/: typedef.mat
matc_ast/: Cargo.toml
matc_ast/src/: expr.rs  lib.rs  param.rs  stmt.rs  ty.rs
matc_parser/: Cargo.toml
matc_parser/src/: comment.rs  compilation_unit.rs  error.rs  expr.rs  ident.rs  integer.rs  lib.rs  prelude.rs  stmt.rs  string.rs  ty.rs  variable.rs
matc_span/: Cargo.toml
matc_span/src/: lib.rs  span.rs  spanned.rs  src.rs
src/: ast.rs  diag.rs  diagnostics.rs  error.rs  hir.rs  main.rs  parser.rs  sema.rs  util.rs
src/asm/: DirectMemoryReference.java  ImmediateValue.java  Label.java  Literal.java  MemoryReference.java  NamedSymbol.java  OperandPattern.java  Register.java  Statistics.java  SuffixedSymbol.java  Symbol.java  SymbolTable.java  Type.java
src/ast/: AST.java  ASTVisitor.java  AbstractAssignNode.java  BinaryOpNode.java  BlockNode.java  CastNode.java  CompositeTypeDefinition.java  DeclarationVisitor.java  Declarations.java  Dumper.java  ExprNode.java  ExprStmtNode.java  FnCallNode.java  IfNode.java  IntegerLiteralNode.java  LHSNode.java  LiteralNode.java  Location.java  LogicalAndNode.java  Node.java  (+13 more)
(+198 files in other folders)
