[package]
name = "matc"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.3.0" # sema
clap = { version = "4.4.12", features = ["derive"] } # main
linked-hash-map = "0.5.6" # sema
anyhow = "1.0.77" # main
debug_print = "1.0.0" # main
Inflector = "0.11.4" # main
matc_span = { path = "./matc_span" }
matc_ast = { path = "./matc_ast" }
matc_parser = { path = "./matc_parser" }

[workspace]
members = [
    "matc_span",
    "matc_ast",
    "matc_parser",
]
